# regime-switching-bayesian

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: bayesian_model_builder.md  features_to_be_implemented.md  finance_spec.md  finance_spec_v0.md  implement_tutorial_notebook_marimo_v0.md  implement_v0.md  inference_and_diagnostics.md  math_foundations.md  math_spec.md  math_spec_v0.md  model_comparison.md  monte_carlo_simulation.md  overview.md  problem_and_solution.md  pymc_spec_v0.md  regime_switching.md  shock_propagation.md
notebooks/: 01_model_building.ipynb  02_interactive_exploration.ipynb  README.md  regime_switching_v0.py
notebooks/__marimo__/session/: regime_switching_v0.py.json
research/marginalization_engine/: test_marginalization.py
src/: __init__.py  data_gen.py  inference.py  model.py  plotting.py
src/inference/: __init__.py  model_builder.py  sampler.py  test_model_builder.py  test_sampler.py
src/marginalization_engine/: test_marginalization.py
src/regimes/: __init__.py  markov.py  shocks.py  test_shocks.py
src/returns/: __init__.py  covariance.py  student_t.py
src/simulation/: __init__.py  simulator.py  test_simulator.py
tests/: conftest.py  test_data_gen.py  test_inference.py  test_integration.py  test_model.py  test_numpyro.py  test_regimes.py  test_returns.py
